--- a/A01/A01.csproj
+++ b/A01/A01.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
+    </ItemGroup>
+
 </Project>
