--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ riderModule.iml
 
 /.idea
 /.idea/
-*.xml
+/.idea/.idea.Apex Engine Tools CSharp
+/.idea/.idea.Apex Engine Tools CSharp/
 /.idea/.idea.Apex Engine Tools CSharp/.idea/contentModel.xml
