--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,4 @@ obj/
 riderModule.iml
 /_ReSharper.Caches/
 
-/.idea
-/.idea/
-/.idea/.idea.Apex Engine Tools CSharp
-/.idea/.idea.Apex Engine Tools CSharp/
-/.idea/.idea.Apex Engine Tools CSharp/.idea/contentModel.xml
+.idea/
