--- a/A01/A01.csproj
+++ b/A01/A01.csproj
@@ -6,7 +6,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ExtendedXmlSerializer" Version="3.7.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.3.21201.4" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0-preview.3.21201.4" />
       <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
