--- a/EonZeNx.ApexTools.IRTPC.V01/EonZeNx.ApexTools.IRTPC.V01.csproj
+++ b/EonZeNx.ApexTools.IRTPC.V01/EonZeNx.ApexTools.IRTPC.V01.csproj
@@ -1,14 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <None Update="appsettings.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+      <ProjectReference Include="..\EonZeNx.ApexTools.Core\EonZeNx.ApexTools.Core.csproj" />
     </ItemGroup>
 
 </Project>
