Git ignore stuff again

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ riderModule.iml
 /_ReSharper.Caches/
 
 .idea/
+.idea/.idea.Apex Engine Tools CSharp/
+.idea/.idea.Apex Engine Tools CSharp/.idea/
+.vscode/
