Working first pass at RTPC binary deserialization and XML serialization

--- a/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
+++ b/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
       <ProjectReference Include="..\EonZeNx.ApexTools.Core\EonZeNx.ApexTools.Core.csproj" />
       <ProjectReference Include="..\EonZeNx.ApexTools.IRTPC.V01\EonZeNx.ApexTools.IRTPC.V01.csproj" />
+      <ProjectReference Include="..\EonZeNx.ApexTools.RTPC.V01\EonZeNx.ApexTools.RTPC.V01.csproj" />
     </ItemGroup>
 
 </Project>
