--- a/EonZeNx.ApexTools.RTPC.V01/EonZeNx.ApexTools.RTPC.V01.csproj
+++ b/EonZeNx.ApexTools.RTPC.V01/EonZeNx.ApexTools.RTPC.V01.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EonZeNx.ApexTools.Core\EonZeNx.ApexTools.Core.csproj" />
+    </ItemGroup>
+
 </Project>
