--- a/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
+++ b/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <PlatformTarget>AnyCPU</PlatformTarget>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <PlatformTarget>AnyCPU</PlatformTarget>
+    </PropertyGroup>
+
 </Project>
