--- a/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
+++ b/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
@@ -12,4 +12,8 @@
       <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
+    </ItemGroup>
+
 </Project>
