--- a/EonZeNx.ApexTools.IRTPC.V01/EonZeNx.ApexTools.IRTPC.V01.csproj
+++ b/EonZeNx.ApexTools.IRTPC.V01/EonZeNx.ApexTools.IRTPC.V01.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\EonZeNx.ApexTools.Core\EonZeNx.ApexTools.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
+    </ItemGroup>
+
 </Project>
