--- a/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
+++ b/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
@@ -14,4 +14,14 @@
       <ProjectReference Include="..\EonZeNx.ApexTools.RTPC.V01\EonZeNx.ApexTools.RTPC.V01.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="dbs\global.db">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
