--- a/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
+++ b/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
@@ -13,7 +13,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EonZeNx.ApexTools.Configuration\EonZeNx.ApexTools.Configuration.csproj" />
     </ItemGroup>
 
 </Project>
