--- a/EonZeNx.ApexTools.IRTPC.V01/EonZeNx.ApexTools.IRTPC.V01.csproj
+++ b/EonZeNx.ApexTools.IRTPC.V01/EonZeNx.ApexTools.IRTPC.V01.csproj
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
     </ItemGroup>
 
 </Project>
