--- a/EonZeNx.ApexTools.RTPC.V01/EonZeNx.ApexTools.RTPC.V01.csproj
+++ b/EonZeNx.ApexTools.RTPC.V01/EonZeNx.ApexTools.RTPC.V01.csproj
@@ -5,11 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EonZeNx.ApexTools.Configuration\EonZeNx.ApexTools.Configuration.csproj" />
       <ProjectReference Include="..\EonZeNx.ApexTools.Core\EonZeNx.ApexTools.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
     </ItemGroup>
 
 </Project>
