--- a/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
+++ b/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
@@ -15,13 +15,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
-    </ItemGroup>
-
-    <ItemGroup>
       <None Update="dbs\global.db">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
     </ItemGroup>
 
 </Project>
