--- a/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
+++ b/EonZeNx.ApexTools.Core/EonZeNx.ApexTools.Core.csproj
@@ -20,4 +20,13 @@
       <ProjectReference Include="..\EonZeNx.ApexTools.Configuration\EonZeNx.ApexTools.Configuration.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="zlib.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="oo2core_7_win64.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
