--- a/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
+++ b/EonZeNx.ApexTools/EonZeNx.ApexTools.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EonZeNx.ApexTools.AAF.V01\EonZeNx.ApexTools.AAF.V01.csproj" />
       <ProjectReference Include="..\EonZeNx.ApexTools.Configuration\EonZeNx.ApexTools.Configuration.csproj" />
       <ProjectReference Include="..\EonZeNx.ApexTools.Core\EonZeNx.ApexTools.Core.csproj" />
       <ProjectReference Include="..\EonZeNx.ApexTools.IRTPC.V01\EonZeNx.ApexTools.IRTPC.V01.csproj" />
